@@ -144,4 +144,4 @@ Enjoy!
 Gunnar Ritter
 Freiburg i. Br.
 Germany
-<Gunnar.Ritter@pluto.uni-freiburg.de>                           1/8/05
+<gunnarr@acm.org>                                                 7/12/05
